# IncrementUpdate

./: .gitignore  README.md
apk/: app.patch  new.apk  old.apk
app/: build.gradle
app/src/androidTest/java/com/bryan/incrementupdate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c
app/src/main/java/com/bryan/incrementupdate/: BsPatch.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/bryan/incrementupdate/: ExampleUnitTest.java
bsdiff4.3/: CMakeLists.txt  bsdiff.c  bspatch.c
bsdiff4.3/bzip2/: bzip2.c
bsdiff4.3/linux64/: README.md  bsdiff  bspatch
